[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latexds"
description = "LaTeX renderer in discord"
readme = "README.md"
version = "v1.0.0"
dependencies = [
    "discord.py==2.4.0",
    "sympy==1.13.1",
    "pillow==10.4.0",
]
authors = [{name = "Nakidai", email = "plaza521@inbox.ru"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
latexds = "latexds:main"
